--- a/README
+++ b/README
@@ -1,2 +1,14 @@
+# Before starting, install node, npm (included with node), vscode and git.
+
+# Run the following commands to install dependencies
+
 npm install express cors dotenv helmet morgan
 npm install --save-dev typescript @types/express @types/cors @types/dotenv @types/helmet @types/morgan
+
+# The following commands will rebuild and start our server
+# in Bash
+npx tsc && node .
+
+# Windows
+npx tsc; node .
+
